Fixing up whitespace issues.

--- a/src/components/linearProgress/_linearProgress.scss
+++ b/src/components/linearProgress/_linearProgress.scss
@@ -1,10 +1,8 @@
-$bar-height: 5px;
-
-material-linear-progress {
+$bar-height:5px;
+ material-linear-progress {
   display: block;
   width: 100%;
   height: $bar-height;
-
   .container {
     overflow: hidden;
     position: relative;
@@ -13,69 +11,56 @@ material-linear-progress {
     top: $bar-height;
     @include transition(all .3s linear);
   }
-
   .container.ready {
     height: $bar-height;
     top: 0;
   }
-
   .bar {
     height: $bar-height;
     background-color: $color-blue-500;
     position: absolute;
   }
-
   .bar1, .bar2 {
-  	@include transition(width 0.2s linear);
+    @include transition(width 0.2s linear);
   }
-
   &[mode=determinate] {
     .bar1 {
-    	display: none;
+      display: none;
     }
   }
-
   &[mode=indeterminate] {
     .bar1 {
       left: 50%;
       width: 10%;
       @include animation(indeterminate1 5s infinite linear);
     }
-
     .bar2 {
       left: 0%;
       width: 0%;
       @include animation(indeterminate2 5s infinite linear);
     }
   }
-
   &[mode=buffer] {
-    .container{
+    .container {
       background-color: transparent;
     }
-
-	  .dashed:before {
-		  content: "";
-		  display: block;
-		  height: $bar-height;
-		  width: 100%;
-		  margin-top: 0px;
-	    position: absolute;
-		  
-		  background:
-				radial-gradient(#d0d9ff 0%, #d0d9ff 20%, transparent 50%);
-				background-color: transparent; 
-				background-size: 10px 10px;
-			background-position: 0px -23px;
-
-			@include animation(buffer 3s infinite linear);
-		}
-
-		.bar1 {
-			background-color: $color-blue-100;
-		}
-  } 
-
+    .dashed:before {
+      content: "";
+      display: block;
+      height: $bar-height;
+      width: 100%;
+      margin-top: 0px;
+      position: absolute;
+      background: radial-gradient(#d0d9ff 0%, #d0d9ff 20%, transparent 50%);
+      background-color: transparent;
+      background-size: 10px 10px;
+      background-position: 0px -23px;
+      @include animation(buffer 3s infinite linear);
+    }
+    .bar1 {
+      background-color: $color-blue-100;
+    }
+  }
   &[mode=query] {
     .bar2 {
       left: 50%;
@@ -84,7 +69,6 @@ material-linear-progress {
     }
   }
 }
-
 @include keyframes(indeterminate1) {
   0% {
     width: 0%;
@@ -147,7 +131,6 @@ material-linear-progress {
     left: 100%;
   }
 }
-
 @include keyframes(indeterminate2) {
   0% {
     width: 0%;
@@ -213,7 +196,6 @@ material-linear-progress {
     left: 100%;
   }
 }
-
 @include keyframes(query) {
   0% {
     width: 30%;
@@ -225,17 +207,14 @@ material-linear-progress {
     opacity: 0;
   }
 }
-
 @include keyframes(buffer) {
   0% {
     opacity: 1;
     background-position: 0px -23px;
   }
-
   50% {
-		opacity: 0;
+    opacity: 0;
   }
-
   100% {
     opacity: 1;
     background-position: -200px -23px;
